k8s/sandbox-api/sandbox-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-api-deployment
spec:
  selector:
    matchLabels:
      app: sandbox-api # Selector for POD name search.
  template:
    metadata:
      labels:
        app: sandbox-api
    spec:
      serviceAccountName: internal-kubectl
      containers:
      - name: sandbox-api
        image: sandbox-api-image
        ports:
          - containerPort: 80
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: sandbox-api-svc
spec:
  selector:
      app: sandbox-api
  type: ClusterIP
  ports:
  - name: sandbox-api
    port: 80
    targetPort: 80
