k8s/sandbox-api/sandbox-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-api
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: sandbox-api-svc
            port:
              number: 80
        path: /
        pathType: Prefix
